this is a big one.
fixed a anchored widget issue where clearing the widget was going beyond widget boundaries.
MtronDocProcessor now processes markdown files (skills) and adoc files (website).
skills are now deployed to website
fix a bug in nanorc around booleans
developed a faster type checker for inst_dom and inst_rng when tids are c-within and label-equal.
fixed a bug in fURI around extending an empty furi (creates absolute uri).
ideInstSet full agent ide harness working -- though needs to be made less complex for agents (needs more helper instructions).
fixed a bug in stackSpace around qprocs (qprocs are on root, not on the stackSpace obj).